Fixed some alignment issues.

--- a/src/style.css
+++ b/src/style.css
@@ -87,18 +87,18 @@ h1, h2, h3 {
 
 #buttonHelp .leftButton {
 	bottom: 80px;
-	left: 10px;
+	left: 30px;
 }
 #buttonHelp .rightButton {
 	bottom: 5px;
-	left: 210px;
+	left: 300px;
 }
 #buttonHelp .upButton {
-	bottom: 600px;
+	bottom: 500px;
 	right: 10px;
 }
 #buttonHelp .enterButton {
-	bottom: 350px;
+	bottom: 300px;
 	right: 15px;
 }
 #buttonHelp .downButton {
@@ -119,7 +119,7 @@ h1, h2, h3 {
 .controlPanel .slideBox {
 	position: relative;
 	overflow:hidden;
-	height: 768px;
+	height: 1024px;
 	width: 1024px;
 	transform: scale(0.75);
 	transform-origin: 50px 75px;
